# coding-plan-proxy

./: AGENTS.md  README.md  index.html  package-lock.json  package.json
.github/workflows/: build.yml
proxy/: index.mjs  package.json
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: codex_config.rs  commands.rs  db.rs  lib.rs  proxy.rs
src/data/: locale.ts  presets.json  presets.ts
