[package]
name = "codexproxy"
version = "1.0.0"
description = "Desktop manager for Coding Plan API providers — seamless Codex integration"
authors = ["NeoMei"]
license = "MIT"
repository = "https://github.com/NeoMei/CodexProxy"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-autostart = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
toml = "0.8"
dirs = "5"
uuid = { version = "1", features = ["v4"] }
